# Labyrinth

./: .gitignore  .pylintrc  LICENSE  README.md  compute_metrics.py  convert_structure.py  create_dataset.py  dataset.ipynb  dev.py  enjoy test.ipynb  enjoy.py  enjoy2.py  ensemble.py  explain.py  generate.py  graph comparison.ipynb  graph.py  heatmap.py  imagetest.py  pyproject.toml  requirements.txt  setup.py  stats.md  test_maze_functions.py  test_models.py  teste.py  train.py  train_gail.py  train_ilpo.py  train_iupe.py
.github/workflows/: build.yml
algo/datasets/: __init__.py  dataset.py  expert.py  expert_data.py  random_data.py
algo/il/: .ILPO.py.swp  GAIL.py  ILPO.py  IUPE.py  __init__.py
algos/: dqn.py
configs/: att.yaml  cnn.yaml  resnet.yaml
environment/: __init__.py  maze.py
environment/utils/: __init__.py  colors.py  dfs.py  node.py  utils.py
maze/: create_expert.py  create_random.py  generate.py  repr_expert.py
maze/environment/: __init__.py  maze.py
requirements/: dev_requirements.txt  requirements.txt
scripts/: create_dataset.sh  create_expert.sh  create_maze.sh  create_random.sh  install.sh  rept_expert.sh  setup.sh  train_iupe.sh
src/: __init__.py  create_expert.py  create_maze_from_file.py  create_random.py  file_utils.py  generate.py  interp.py  repr_expert.py
src/labyrinth/: __init__.py  file_utils.py  interp.py  labyrinth.py
tests/: __init__.py  test_create_expert.py  test_create_random.py  test_dfs.py  test_file_utils.py  test_interpreter.py  test_labyrinth_functions.py  test_maze_functions.py  test_node.py
(+2144 files in other folders)
