[build-system]
requires = ["setuptools==59.5.0", "wheel==0.38.4"]
build-backend = "setuptools.build_meta"

[project]
name = "labyrinth"
version = "0.1"
description = "A labyrinth environment for simulations"
authors = [
    {name = "Nathan Gavenski", email = "nathangavenski@gmail.com"},
]
requires-python = ">=3.6"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
